# grammata

./: .ghci  Grammata.hs  LICENSE  README.md  grammata.cabal  run.hs  stack.yaml  test.gram  test.gram.hs  th.hs
Grammata/: Chart.hs  Parse.hs  TH.hs  Types.hs  Util.hs
Grammata/Base/: Common.hs  Html.hs  Latex.hs  Pdf.hs  Tex.hs
Grammata/Format/: Html.hs  PDF.hs  PlainText.hs  TeX.hs
src/: grammata.hs  main.hs  run.hs
