Name:                grammata
Version:             0.1
Cabal-Version:       >= 1.10
Build-type:          Simple
Synopsis:            Flexible document generation.
Description:         TBD
Category:            Text
Stability:           Experimental
License:             BSD2
License-File:        LICENSE
Author:              John MacFarlane
Maintainer:          jgm@berkeley.edu
Homepage:            http://github.com/jgm/grammata
Extra-source-files:  README.md

Source-repository head
  type:              git
  location:          git://github.com/jgm/grammata.git

Flag executable
  description:       Compile executable.
  default:           True

Library
    Build-depends:       base >= 4.5 && < 5, containers, text,
                         mtl, template-haskell, bytestring >= 0.10,
                         directory, process, temporary, time, hint, parsec,
                         bytestring, split, exceptions
                         -- ,Chart, Chart-diagrams
    Exposed-modules:     Grammata
                         Grammata.Types
                         Grammata.Parse
--                         Grammata.Chart
                         Grammata.Util
                         Grammata.Base.Html
                         Grammata.Base.Latex
                         Grammata.Base.Pdf
                         Grammata.Base.Common
    if impl(ghc >= 6.12)
      Ghc-Options:     -Wall -fno-warn-unused-do-bind
    else
      Ghc-Options:     -Wall
    Ghc-Prof-Options:  -auto-all -caf-all
    Default-Language:    Haskell2010
    Hs-Source-Dirs:    .

Executable grammata
    Default-Language:    Haskell2010
    Main-is:             main.hs
    Hs-Source-Dirs:      src
    if impl(ghc >= 6.12)
      Ghc-Options:     -Wall -fno-warn-unused-do-bind
    else
      Ghc-Options:     -Wall
    Ghc-Prof-Options:  -auto-all -caf-all
    if flag(executable)
      Buildable:         True
      Build-Depends:     base >= 4.5 && < 5, grammata, hint, mtl,
                         bytestring >= 0.10, optparse-applicative
    else
      Buildable:         False

